Therion 6.1.1 (in progress):


--------------------------------------------------------------------------------

Therion 6.1.0 (2022-05-27):

therion:
 * CHANGED the default settings for 'proj-auto' (on) and 'proj-missing-grid'
   (download) to allow Proj choosing the best transformation and automatically
   download any missing transformation grids
 * added a new ini file option ‘cs-trans’ for user-defined PROJ transformation
   pipelines between two coordinate systems
 * added support for automatic downloading of PROJ transformation grids used
   in cs-trans pipelines from cdn.proj.org
 * layout: color map-fg scrap now uses more different colors to avoid that
   connected scraps are colored the same. Needed in labyrinth-like caves. [#416]
 * support custom font size in map labels using <size:N> in the label text
 * support atlas page labeling A, B, …, Z, AA, AB, … instead of only A, B, …, Z
 * updated bundled libraries: survex/img 1.4.3, Catch2 2.13.9, fmt 8.1.1
 * documentation fixes [#410,#415,#417]
 * updated github workflows [#411]

--------------------------------------------------------------------------------

Therion 6.0.6 (2022-03-12):

therion:
 * added support for hex rgb color specification (e.g. color map-fg ffeeaa)
 * using -value with point extra triggers deprecation warning. It is
   undocumented feature/bug.
 * thbook improvements [#403,404,406,407] (thanks to Rodrigo Severo)
 * support Proj 9.0.0 in test_proj.py

xtherion:
 * bugs fixed:
   - control panel sizing on certain OS and hidpi displays

loch:
 * bugs fixed:
   - mac retina display size fix

infrastructure:
 * cmake: fix a missing icon in therion.exe [#405] (thanks to Matěj Plch)
 * split too long lines in .github/workflows/*.yml
 * support for signed releases: sign the tag + upload a detached signature
   for .tar.gz sources to a Github release (the release is now created by
   the local script make_release.py instead of Github Actions;